attempt to fix software dev not showing

--- a/css/main.css
+++ b/css/main.css
@@ -147,5 +147,5 @@ hr{
 	background-image : url(../images/halite3.png);
 }
 .project4{
-	background-image : url(../images/softwaredev.png);
+	background-image : url(../images/softwaredev.jpg);
 }
